Add `SimpleDtoMapper`, DTOs, and corresponding tests for `ReplaceMapstructWithImpl` recipe.