@@ -16,7 +16,9 @@ import org.openrewrite.java.tree.TypeUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -65,7 +67,7 @@ public class ReplaceMapstructWithImpl extends Recipe {
 
     @Override
     public TreeVisitor<?, ExecutionContext> getVisitor() {
-        return new JavaVisitor<>() {
+        return new JavaVisitor<ExecutionContext>() {
             @Override
             public J visitCompilationUnit(J.CompilationUnit originalCu, ExecutionContext ctx) {
                 // 1. Identify if this is a Mapstruct Mapper interface
@@ -84,7 +86,7 @@ public class ReplaceMapstructWithImpl extends Recipe {
                     // We use a basic parser here. Since we are just moving AST nodes,
                     // we don't strictly need the full classpath for the *generated* file parsing
                     // if we rely on string matching for simple things like "Override".
-                    J.CompilationUnit implCu = (J.CompilationUnit) getGeneratedClass(originalCu, originalInterface);
+                    J.CompilationUnit implCu = (J.CompilationUnit) getGeneratedClass(originalCu, originalInterface, ctx);
                     J.ClassDeclaration implClass = implCu.getClasses().get(0);
 
                     // ==========================================================
@@ -101,7 +103,8 @@ public class ReplaceMapstructWithImpl extends Recipe {
                     List<Statement> classStatements = new ArrayList<>();
 
                     for (Statement s : implClass.getBody().getStatements()) {
-                        if (s instanceof J.MethodDeclaration m) {
+                        if (s instanceof J.MethodDeclaration) {
+                            J.MethodDeclaration m = (J.MethodDeclaration) s;
                             // Filter out annotations that look like Override
                             List<J.Annotation> cleanedAnnotations = ListUtils.map(m.getLeadingAnnotations(), a -> {
                                 if (a.getSimpleName().equals("Override") ||
@@ -129,7 +132,7 @@ public class ReplaceMapstructWithImpl extends Recipe {
                     implClass = implClass.withImplements(null);
 
                     // Replace the class in the CU
-                    implCu = implCu.withClasses(List.of(implClass));
+                    implCu = implCu.withClasses(Collections.singletonList(implClass));
 
                     // Return the new CU, masquerading as the old file (preserving ID and Path)
                     return implCu
@@ -141,24 +144,87 @@ public class ReplaceMapstructWithImpl extends Recipe {
                 }
             }
 
-            private SourceFile getGeneratedClass(J.CompilationUnit originalCu, J.ClassDeclaration originalInterface) throws IOException {
+            private SourceFile getGeneratedClass(J.CompilationUnit originalCu, J.ClassDeclaration originalInterface, ExecutionContext ctx) throws IOException {
                 String className = originalInterface.getName().getSimpleName();
                 String pkg = originalCu.getPackageDeclaration() != null ?
                         originalCu.getPackageDeclaration().getExpression().printTrimmed(getCursor()) : "";
                 String implClassName = className + "Impl";
-                Path generatedPath = getGeneratedClassPath(originalCu, pkg, implClassName);
+                String generatedPathStr = "build/generated/sources/annotationProcessor/java/main/" + 
+                        pkg.replace('.', '/') + "/" + implClassName + ".java";
+                
+                // First, try to find the file in the current source set (for test framework)
+                Path generatedPath = Paths.get(generatedPathStr);
+                
+                // Try to find it as a SourceFile in the execution context
+                // Note: This is a simplified approach - in a real scenario, you'd want to access
+                // the SourceFile set from ExecutionContext, but that's not directly available.
+                // For now, we'll try to read from disk, which works for real projects.
+                
+                Path resolvedPath = getGeneratedClassPath(originalCu, pkg, implClassName);
+                
+                // Check if file exists before trying to read
+                if (!Files.exists(resolvedPath)) {
+                    throw new IllegalStateException("Generated file does not exist: " + resolvedPath + 
+                            " (source path: " + originalCu.getSourcePath() + ", looking for: " + generatedPathStr + ")");
+                }
+                
                 JavaParser parser = JavaParser.fromJavaVersion().build();
-                return parser.parse(new String(Files.readAllBytes(generatedPath))).findFirst().orElseThrow();
+                return parser.parse(new String(Files.readAllBytes(resolvedPath))).findFirst()
+                        .orElseThrow(() -> new IllegalStateException("Could not parse generated class: " + resolvedPath));
             }
 
             private Path getGeneratedClassPath(J.CompilationUnit originalCu, String pkg, String implClassName) {
                 // 2. Locate the generated file on disk
+                Path originalPath = originalCu.getSourcePath();
+                if (originalPath == null) {
+                    throw new IllegalStateException("Source path is null");
+                }
+                
+                // Try relative path first (for test framework)
+                Path relativeGeneratedPath = Paths.get("build/generated/sources/annotationProcessor/java/main")
+                        .resolve(pkg.replace('.', '/'))
+                        .resolve(implClassName + ".java");
+                
+                // If original path is relative, try resolving relative to it
+                if (!originalPath.isAbsolute()) {
+                    // Try to resolve relative to the source file's directory structure
+                    // If source is at src/main/java/com/example/MyMapper.java
+                    // and we need build/generated/..., go up to project root first
+                    Path sourceDir = originalPath.getParent(); // src/main/java/com/example
+                    if (sourceDir != null) {
+                        // Go up to project root: .../example -> .../com -> .../java -> .../main -> .../src -> projectRoot
+                        Path temp = sourceDir;
+                        int depth = 0;
+                        while (temp != null && depth < 10) {
+                            Path fileName = temp.getFileName();
+                            if (fileName != null && "src".equals(fileName.toString())) {
+                                Path projectRoot = temp.getParent();
+                                if (projectRoot != null) {
+                                    Path absPath = projectRoot.resolve(relativeGeneratedPath).toAbsolutePath();
+                                    if (Files.exists(absPath)) {
+                                        return absPath;
+                                    }
+                                }
+                            }
+                            temp = temp.getParent();
+                            depth++;
+                        }
+                    }
+                }
+                
+                // Fallback: use project directory resolution
                 Path projectDir = getProjectDir(originalCu);
                 Path generatedPath = projectDir.resolve("build/generated/sources/annotationProcessor/java/main")
                         .resolve(pkg.replace('.', '/'))
                         .resolve(implClassName + ".java");
 
                 if (!Files.exists(generatedPath)) {
+                    // Try as absolute path from current working directory
+                    Path cwdPath = Paths.get("").toAbsolutePath().resolve(relativeGeneratedPath);
+                    if (Files.exists(cwdPath)) {
+                        return cwdPath;
+                    }
+                    
                     throw new IllegalStateException(String.format("Could not find generated annotations in %s from " +
                             "project %s" +
                             ". Did you compile?", generatedPath, projectDir));
@@ -173,15 +239,62 @@ public class ReplaceMapstructWithImpl extends Recipe {
 
             private Path getProjectDir(J.CompilationUnit originalCu) {
                 Path currentPath = originalCu.getSourcePath();
-                while (currentPath != null && !currentPath.endsWith("src")) {
-                    currentPath = currentPath.getParent();
+                if (currentPath == null) {
+                    throw new IllegalStateException("Source path is null");
                 }
-
-                if (currentPath != null && currentPath.endsWith("src")) {
-                    return currentPath.getParent().toAbsolutePath();
-                } else {
-                    throw new IllegalStateException("Could not determine project directory from source path: " + originalCu.getSourcePath());
+                
+                // Convert to absolute path to work with file system
+                Path absolutePath = currentPath.toAbsolutePath();
+                
+                // Walk up the path looking for "src" directory
+                Path searchPath = absolutePath;
+                while (searchPath != null) {
+                    Path fileName = searchPath.getFileName();
+                    if (fileName != null && "src".equals(fileName.toString())) {
+                        Path parent = searchPath.getParent();
+                        if (parent != null) {
+                            return parent.toAbsolutePath();
+                        }
+                        break;
+                    }
+                    Path next = searchPath.getParent();
+                    if (next == null || next.equals(searchPath)) {
+                        break;
+                    }
+                    searchPath = next;
                 }
+                
+                // Fallback: if path structure is src/main/java/..., go up 3 levels from "main"
+                Path fallback = absolutePath;
+                int maxDepth = 20;
+                int depth = 0;
+                while (fallback != null && depth < maxDepth) {
+                    Path fileName = fallback.getFileName();
+                    if (fileName != null) {
+                        String nameStr = fileName.toString();
+                        if ("main".equals(nameStr)) {
+                            // Go up: main -> java -> src -> projectRoot
+                            Path javaDir = fallback.getParent();
+                            if (javaDir != null) {
+                                Path srcDir = javaDir.getParent();
+                                if (srcDir != null) {
+                                    Path projectRoot = srcDir.getParent();
+                                    if (projectRoot != null) {
+                                        return projectRoot.toAbsolutePath();
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    Path next = fallback.getParent();
+                    if (next == null || next.equals(fallback)) {
+                        break;
+                    }
+                    fallback = next;
+                    depth++;
+                }
+                
+                throw new IllegalStateException("Could not determine project directory from source path: " + originalCu.getSourcePath());
             }
         };
     }
